Added Django Rest Framework

--- a/Pipfile
+++ b/Pipfile
@@ -5,9 +5,11 @@ name = "pypi"
 
 [packages]
 django = "*"
-jedi-language-server = "*"
+djangorestframework = "*"
+django-filter = "*"
 
 [dev-packages]
+jedi-language-server = "*"
 
 [requires]
 python_version = "3.11"
