--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 django = "*"
 djangorestframework = "*"
 django-filter = "*"
+sslcommerz-lib = "*"
 
 [dev-packages]
 jedi-language-server = "*"
